Docs: Ensure full-width content covers table of contents (#27561)
GitOrigin-RevId: 17ccd0f9f627bd6ab1c4a0ce2e5e4071332d6691

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -848,6 +848,11 @@ main article > div {
 }
 /* END: StepByStep styling */
 
+/* Ensure that content within the main column can overlap the table of contents. */
+main .container .col[class*="docItemCol"] {
+  z-index: 50;
+}
+
 .convex-inline-code-with-copy-button {
   display: inline-flex;
   line-height: 0.95rem;
